--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -11,6 +11,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ @import "bootstrap";
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -3996,11 +3997,12 @@ textarea.form-control-lg {
   background: none;
   border: 0;
   border-radius: 0.25rem;
+  color: var(--bs-secondary); 
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #0d6efd;
+  color: #fff; 
+  background-color: var(--bs-secondary);
 }
 
 .nav-fill > .nav-link,
@@ -11307,3 +11309,430 @@ textarea.form-control-lg {
   --bs-text-opacity: 1;
   border-left: 0.25rem solid rgba(var(--bs-warning-rgb), var(--bs-text-opacity))!important;
 }
+
+
+.Login-button {
+  display: block;
+  font-size: 18px;
+  height: 60px;
+  margin: 20px auto;
+  width: 300px;
+  @include button-outline-variant(rgb(255, 125, 0), rgb(255, 255, 255));
+}
+
+.Login-button:hover {
+  opacity: 0.9;
+}
+
+.Login-email {
+  background-color: darkgray;
+}
+
+.Login-fb {
+  background-color: rgb(72, 98, 163);
+}
+
+.Login-mm {
+  background-color: rgb(255, 125, 0);
+}
+
+.error {
+  color: #5a5c69;
+  font-size: 7rem;
+  position: relative;
+  line-height: 1;
+  width: 12.5rem;
+}
+
+@-webkit-keyframes noise-anim-2 {
+  0% {
+      clip: rect(16px, 9999px, 10px, 0)
+  }
+
+  5% {
+      clip: rect(22px, 9999px, 29px, 0)
+  }
+
+  10% {
+      clip: rect(6px, 9999px, 68px, 0)
+  }
+
+  15% {
+      clip: rect(85px, 9999px, 95px, 0)
+  }
+
+  20% {
+      clip: rect(65px, 9999px, 91px, 0)
+  }
+
+  25% {
+      clip: rect(93px, 9999px, 68px, 0)
+  }
+
+  30% {
+      clip: rect(10px, 9999px, 27px, 0)
+  }
+
+  35% {
+      clip: rect(37px, 9999px, 25px, 0)
+  }
+
+  40% {
+      clip: rect(12px, 9999px, 23px, 0)
+  }
+
+  45% {
+      clip: rect(40px, 9999px, 18px, 0)
+  }
+
+  50% {
+      clip: rect(19px, 9999px, 71px, 0)
+  }
+
+  55% {
+      clip: rect(2px, 9999px, 35px, 0)
+  }
+
+  60% {
+      clip: rect(16px, 9999px, 69px, 0)
+  }
+
+  65% {
+      clip: rect(8px, 9999px, 65px, 0)
+  }
+
+  70% {
+      clip: rect(30px, 9999px, 57px, 0)
+  }
+
+  75% {
+      clip: rect(14px, 9999px, 4px, 0)
+  }
+
+  80% {
+      clip: rect(39px, 9999px, 30px, 0)
+  }
+
+  85% {
+      clip: rect(22px, 9999px, 35px, 0)
+  }
+
+  90% {
+      clip: rect(58px, 9999px, 71px, 0)
+  }
+
+  95% {
+      clip: rect(34px, 9999px, 90px, 0)
+  }
+
+  100% {
+      clip: rect(67px, 9999px, 68px, 0)
+  }
+}
+
+@keyframes noise-anim-2 {
+  0% {
+      clip: rect(16px, 9999px, 10px, 0)
+  }
+
+  5% {
+      clip: rect(22px, 9999px, 29px, 0)
+  }
+
+  10% {
+      clip: rect(6px, 9999px, 68px, 0)
+  }
+
+  15% {
+      clip: rect(85px, 9999px, 95px, 0)
+  }
+
+  20% {
+      clip: rect(65px, 9999px, 91px, 0)
+  }
+
+  25% {
+      clip: rect(93px, 9999px, 68px, 0)
+  }
+
+  30% {
+      clip: rect(10px, 9999px, 27px, 0)
+  }
+
+  35% {
+      clip: rect(37px, 9999px, 25px, 0)
+  }
+
+  40% {
+      clip: rect(12px, 9999px, 23px, 0)
+  }
+
+  45% {
+      clip: rect(40px, 9999px, 18px, 0)
+  }
+
+  50% {
+      clip: rect(19px, 9999px, 71px, 0)
+  }
+
+  55% {
+      clip: rect(2px, 9999px, 35px, 0)
+  }
+
+  60% {
+      clip: rect(16px, 9999px, 69px, 0)
+  }
+
+  65% {
+      clip: rect(8px, 9999px, 65px, 0)
+  }
+
+  70% {
+      clip: rect(30px, 9999px, 57px, 0)
+  }
+
+  75% {
+      clip: rect(14px, 9999px, 4px, 0)
+  }
+
+  80% {
+      clip: rect(39px, 9999px, 30px, 0)
+  }
+
+  85% {
+      clip: rect(22px, 9999px, 35px, 0)
+  }
+
+  90% {
+      clip: rect(58px, 9999px, 71px, 0)
+  }
+
+  95% {
+      clip: rect(34px, 9999px, 90px, 0)
+  }
+
+  100% {
+      clip: rect(67px, 9999px, 68px, 0)
+  }
+}
+
+.error::before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 #4e73df;
+  top: 0;
+  color: #5a5c69;
+  background: #f8f9fc;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+
+@-webkit-keyframes noise-anim {
+  0% {
+      clip: rect(49px, 9999px, 40px, 0)
+  }
+
+  5% {
+      clip: rect(75px, 9999px, 72px, 0)
+  }
+
+  10% {
+      clip: rect(97px, 9999px, 93px, 0)
+  }
+
+  15% {
+      clip: rect(15px, 9999px, 9px, 0)
+  }
+
+  20% {
+      clip: rect(14px, 9999px, 92px, 0)
+  }
+
+  25% {
+      clip: rect(18px, 9999px, 94px, 0)
+  }
+
+  30% {
+      clip: rect(17px, 9999px, 20px, 0)
+  }
+
+  35% {
+      clip: rect(71px, 9999px, 59px, 0)
+  }
+
+  40% {
+      clip: rect(42px, 9999px, 84px, 0)
+  }
+
+  45% {
+      clip: rect(56px, 9999px, 25px, 0)
+  }
+
+  50% {
+      clip: rect(46px, 9999px, 14px, 0)
+  }
+
+  55% {
+      clip: rect(47px, 9999px, 1px, 0)
+  }
+
+  60% {
+      clip: rect(64px, 9999px, 58px, 0)
+  }
+
+  65% {
+      clip: rect(89px, 9999px, 92px, 0)
+  }
+
+  70% {
+      clip: rect(56px, 9999px, 39px, 0)
+  }
+
+  75% {
+      clip: rect(80px, 9999px, 71px, 0)
+  }
+
+  80% {
+      clip: rect(8px, 9999px, 13px, 0)
+  }
+
+  85% {
+      clip: rect(66px, 9999px, 68px, 0)
+  }
+
+  90% {
+      clip: rect(68px, 9999px, 4px, 0)
+  }
+
+  95% {
+      clip: rect(56px, 9999px, 14px, 0)
+  }
+
+  100% {
+      clip: rect(28px, 9999px, 53px, 0)
+  }
+}
+
+@keyframes noise-anim {
+  0% {
+      clip: rect(49px, 9999px, 40px, 0)
+  }
+
+  5% {
+      clip: rect(75px, 9999px, 72px, 0)
+  }
+
+  10% {
+      clip: rect(97px, 9999px, 93px, 0)
+  }
+
+  15% {
+      clip: rect(15px, 9999px, 9px, 0)
+  }
+
+  20% {
+      clip: rect(14px, 9999px, 92px, 0)
+  }
+
+  25% {
+      clip: rect(18px, 9999px, 94px, 0)
+  }
+
+  30% {
+      clip: rect(17px, 9999px, 20px, 0)
+  }
+
+  35% {
+      clip: rect(71px, 9999px, 59px, 0)
+  }
+
+  40% {
+      clip: rect(42px, 9999px, 84px, 0)
+  }
+
+  45% {
+      clip: rect(56px, 9999px, 25px, 0)
+  }
+
+  50% {
+      clip: rect(46px, 9999px, 14px, 0)
+  }
+
+  55% {
+      clip: rect(47px, 9999px, 1px, 0)
+  }
+
+  60% {
+      clip: rect(64px, 9999px, 58px, 0)
+  }
+
+  65% {
+      clip: rect(89px, 9999px, 92px, 0)
+  }
+
+  70% {
+      clip: rect(56px, 9999px, 39px, 0)
+  }
+
+  75% {
+      clip: rect(80px, 9999px, 71px, 0)
+  }
+
+  80% {
+      clip: rect(8px, 9999px, 13px, 0)
+  }
+
+  85% {
+      clip: rect(66px, 9999px, 68px, 0)
+  }
+
+  90% {
+      clip: rect(68px, 9999px, 4px, 0)
+  }
+
+  95% {
+      clip: rect(56px, 9999px, 14px, 0)
+  }
+
+  100% {
+      clip: rect(28px, 9999px, 53px, 0)
+  }
+}
+
+.error::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 #e74a3b;
+  top: 0;
+  color: #5a5c69;
+  background: #f8f9fc;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+
+.text-gray-800 {
+  color: #5a5c69 !important
+}
+
+.text-gray-300 {
+  color: #dddfeb!important;
+}
+
+.font-weight-bold {
+  font-weight: 700 !important;
+}
+
+.fa-2x {
+  font-size: 2em;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 25vh;
+  object-fit: cover;
+}
+
